<resources>
    <string name="app_name">Android Training</string>
    <string name="edit_message">Enter a message</string>
    <string name="button_send">Send</string>
    <string name="button_get">Get</string>
    <string name="button_external">External</string>
    <string name="button_intent_phone">Phone</string>
    <string name="button_intent_map">Map</string>
    <string name="button_intent_web">Web</string>
    <string name="button_intent_chooser">Chooser</string>
    <string name="button_intent_pick_contact">Contact</string>
    <string name="button_permission">Permission</string>
</resources>
